--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.mjs",
   "scripts": {
-    "start": "node index.mjs"
+    "start": "node index.mjs",
+    "lint": "eslint --ext mjs ."
   },
   "type": "module",
   "author": "",
@@ -15,6 +16,9 @@
   "devDependencies": {
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-radar": "^0.2.1",
+    "eslint-plugin-unicorn": "^28.0.2",
     "prettier": "^2.2.1"
   }
 }
