--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,6 @@
 {
+  "root": true,
+  "parser": "@typescript-eslint/parser",
   "env": {
     "es6": true,
     "node": true
@@ -7,15 +9,19 @@
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
-  "plugins": ["radar", "unicorn", "prettier"],
+  "plugins": ["@typescript-eslint", "radar", "unicorn", "prettier"],
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "plugin:radar/recommended",
     "plugin:unicorn/recommended"
   ],
   "rules": {
-    "no-unused-vars": ["error", {"args": "after-used", "argsIgnorePattern": "^_", "varsIgnorePattern": "^_", "ignoreRestSiblings": true}],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {"args": "after-used", "argsIgnorePattern": "^_", "varsIgnorePattern": "^_", "ignoreRestSiblings": true}
+    ],
     "unicorn/filename-case": ["error", {"case": "camelCase"}]
   }
 }
