--- a/package.json
+++ b/package.json
@@ -2,23 +2,40 @@
   "name": "end-credits-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "src/cli.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
-    "start": "node src/index.mjs",
-    "lint": "eslint --ext mjs ."
+    "build": "webpack",
+    "start": "npm build && node dist/index.js",
+    "lint": "eslint --ext mjs --ext ts .",
+    "test": "echo 'No Tests'",
+    "prebuild": "rm -rf ./dist/*",
+    "postinstall": "rm -rf ./cache/*"
   },
   "type": "module",
-  "author": "",
+  "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
     "js-yaml": "^3.14.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-radar": "^0.2.1",
     "eslint-plugin-unicorn": "^28.0.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "ts-loader": "^8.0.18",
+    "typescript": "^4.2.3",
+    "webpack": "^5.27.0",
+    "webpack-cli": "^4.5.0"
   }
 }
