--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "webpack",
     "start": "npm build && node dist/index.js",
+    "cli": "npm build && node dist/cli.js",
     "lint": "eslint --ext mjs --ext ts .",
     "test": "echo 'No Tests'",
     "prebuild": "rm -rf ./dist/*",
@@ -21,9 +22,10 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
-    "js-yaml": "^3.14.0"
+    "js-yaml": "^4.0.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.0",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
