--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "include": ["./src/**/*.ts"],
   "compilerOptions": {
     "module": "esnext",
-    "lib": ["esnext"],
-    "importHelpers": true,
+    "lib": ["esnext", "es2020"],
+    "importHelpers": false,
     // output .d.ts declaration files for consumers
     "declaration": true,
     // output .js.map sourcemap files for consumers
