--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["./src/**/*.ts"],
+  "include": ["./src"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["esnext", "es2020"],
