--- a/package.json
+++ b/package.json
@@ -10,31 +10,40 @@
     "src"
   ],
   "scripts": {
-    "build": "webpack",
+    "build": "tsc -b",
     "start": "npm run build && node dist/index.js",
     "cli": "npm run build && node dist/cli.js",
     "lint": "eslint --ext mjs --ext ts .",
-    "test": "echo 'No Tests'",
+    "test": "jest",
     "prebuild": "rm -rf ./dist/*",
-    "postinstall": "rm -rf ./cache/*"
+    "postinstall": "rm -rf ./cache/*",
+    "cdk": "cdk"
   },
-  "type": "commonjs",
+  "type": "module",
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
     "js-yaml": "^4.0.0"
   },
   "devDependencies": {
+    "@aws-cdk/assert": "1.94.1",
+    "@aws-cdk/core": "1.94.1",
+    "@types/jest": "^26.0.10",
     "@types/js-yaml": "^4.0.0",
     "@types/node": "^14.14.35",
+    "@types/source-map-support": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "aws-cdk": "1.94.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-radar": "^0.2.1",
     "eslint-plugin-unicorn": "^28.0.2",
+    "jest": "^26.4.2",
     "prettier": "^2.2.1",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^26.2.0",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
     "webpack": "^5.27.0",
