--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "include": ["./src"],
+  "exclude": ["cdk.out", "dist"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["esnext", "es2020"],
