--- a/package.json
+++ b/package.json
@@ -22,11 +22,18 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
+    "aws-sdk": "^2.868.0",
     "js-yaml": "^4.0.0"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.94.1",
+    "@aws-cdk/aws-apigateway": "^1.94.1",
+    "@aws-cdk/aws-lambda": "^1.94.1",
+    "@aws-cdk/aws-lambda-nodejs": "^1.94.1",
+    "@aws-cdk/aws-s3": "^1.94.1",
+    "@aws-cdk/aws-sqs": "^1.94.1",
     "@aws-cdk/core": "1.94.1",
+    "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.10",
     "@types/js-yaml": "^4.0.0",
     "@types/node": "^14.14.35",
