--- a/package.json
+++ b/package.json
@@ -1,57 +1,16 @@
 {
-  "name": "end-credits-generator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "name": "@ra100/ecg",
+  "workspaces": [
+    "cdk",
+    "svg",
+    "cli"
+  ],
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "build": "tsc -b",
-    "start": "npm run build && node dist/index.js",
-    "cli": "npm run build && node dist/cli.js",
-    "lint": "eslint --ext mjs --ext ts .",
-    "test": "jest",
-    "clean": "rm -rf ./dist/*",
-    "postinstall": "rm -rf ./cache/*",
-    "cdk": "cdk"
-  },
-  "author": "ra100",
-  "license": "GNU LGPLv3",
-  "dependencies": {
-    "aws-sdk": "^2.868.0",
-    "js-yaml": "^4.0.0"
-  },
-  "devDependencies": {
-    "@aws-cdk/assert": "1.94.1",
-    "@aws-cdk/aws-apigateway": "^1.94.1",
-    "@aws-cdk/aws-lambda": "^1.94.1",
-    "@aws-cdk/aws-lambda-nodejs": "^1.94.1",
-    "@aws-cdk/aws-s3": "^1.94.1",
-    "@aws-cdk/aws-sqs": "^1.94.1",
-    "@aws-cdk/core": "1.94.1",
-    "@types/aws-lambda": "^8.10.72",
-    "@types/jest": "^26.0.10",
-    "@types/js-yaml": "^4.0.0",
-    "@types/node": "^14.14.35",
-    "@types/source-map-support": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "aws-cdk": "1.94.1",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-radar": "^0.2.1",
-    "eslint-plugin-unicorn": "^28.0.2",
-    "jest": "^26.4.2",
-    "prettier": "^2.2.1",
-    "source-map-support": "^0.5.19",
-    "ts-jest": "^26.2.0",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "lint": "eslint --debug --ext mjs --ext ts .",
+    "test:cdk": "cd cdk && npm run test"
   }
 }
