--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
     "src"
   ],
   "scripts": {
-    "lint": "eslint --debug --ext mjs --ext ts .",
-    "test:cdk": "cd cdk && npm run test"
+    "lint": "eslint --ext mjs --ext ts .",
+    "test:cdk": "cd cdk && npm run test",
+    "test:svg": "cd svg && npm run test"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-radar": "^0.2.1",
+    "eslint-plugin-unicorn": "^28.0.2",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
