--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["svg", "cdk", "cli"],
+  "include": ["svg/**/*", "cdk/**/*", "cli/**/*"],
   "exclude": ["cdk.out", "dist"],
   "compilerOptions": {
     "module": "commonjs",
@@ -12,7 +12,7 @@
     // output .js.map sourcemap files for consumers
     "sourceMap": true,
     // match output dir to input dir. e.g. dist/index instead of dist/src/index
-    "rootDir": "./",
+    "rootDirs": ["src"],
     // stricter type-checking for stronger correctness. Recommended by TS
     "strict": true,
     // linter checks for common issues
@@ -35,8 +35,8 @@
     "baseUrl": "./",
     "paths": {
       "@ra100/ecg-cdk": ["cdk"],
-      "@ra100/ecg-svg": ["svg/src"],
-      "@ra100/ecg-cli": ["cli/src"]
+      "@ra100/ecg-svg": ["svg"],
+      "@ra100/ecg-cli": ["cli"]
     }
   },
   "watch": true
