--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@ra100/ecg-cdk",
+  "name": "@ra100-ecg/cdk",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "cdk/bin/index.ts",
   "scripts": {
@@ -12,20 +13,20 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
-    "@aws-cdk/assert": "^1.94.1",
-    "@aws-cdk/aws-apigateway": "^1.94.1",
-    "@aws-cdk/aws-lambda": "^1.94.1",
-    "@aws-cdk/aws-lambda-nodejs": "^1.94.1",
-    "@aws-cdk/aws-logs": "^1.94.1",
-    "@aws-cdk/aws-s3": "^1.94.1",
-    "@aws-cdk/aws-sqs": "^1.94.1",
-    "@aws-cdk/core": "^1.94.1",
-    "aws-cdk": "^1.94.1",
+    "@aws-cdk/assert": "^1.95.1",
+    "@aws-cdk/aws-apigateway": "^1.95.1",
+    "@aws-cdk/aws-lambda": "^1.95.1",
+    "@aws-cdk/aws-lambda-nodejs": "^1.95.1",
+    "@aws-cdk/aws-logs": "^1.95.1",
+    "@aws-cdk/aws-s3": "^1.95.1",
+    "@aws-cdk/aws-sqs": "^1.95.1",
+    "@aws-cdk/core": "^1.95.1",
+    "aws-cdk": "^1.95.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.22",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0"
   }
