--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@ra100/ecg-cli",
+  "name": "@ra100-ecg/cli",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -18,15 +19,15 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
-    "@ra100/ecg-svg": "*",
+    "@ra100-ecg/svg": "^1.0.0",
     "js-yaml": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.22",
     "@types/js-yaml": "^4.0.0",
-    "@types/node": "^14.14.35",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "@types/node": "^14.14.37",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
