--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@ra100/ecg",
+  "name": "ecg",
+  "private": true,
   "workspaces": [
     "cdk",
     "svg",
-    "cli"
+    "cli",
+    "png"
   ],
   "files": [
     "dist",
@@ -15,9 +17,9 @@
     "test:svg": "cd svg && npm run test"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "eslint": "^7.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-radar": "^0.2.1",
