--- a/png/package.json
+++ b/png/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@ra100/ecg-png",
+  "name": "@ra100-ecg/png",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/handler.js",
+  "module": "dist/handler.js",
   "files": [
     "dist",
     "src"
@@ -13,23 +13,22 @@
     "build": "tsc -b",
     "start": "npm run build && node dist/index.js",
     "test": "jest",
-    "clean": "rm -rf ./dist/*",
-    "cdk": "cdk"
+    "clean": "rm -rf ./dist/*"
   },
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.9.0",
-    "@aws-sdk/client-sqs": "^3.9.0",
-    "nanoid": "^3.1.22"
+    "@aws-sdk/client-lambda": "^3.10.0",
+    "@aws-sdk/client-s3": "^3.10.0",
+    "@aws-sdk/lib-storage": "^3.10.0",
+    "@ra100-ecg/svg": "^1.0.0"
   },
   "devDependencies": {
-    "@aws-sdk/types": "^3.6.1",
-    "@types/aws-lambda": "^8.10.72",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.14.35",
-    "jest": "^26.4.2",
-    "prettier": "^2.2.1",
+    "@aws-sdk/types": "^3.10.0",
+    "@types/aws-lambda": "^8.10.73",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "jest": "^26.6.3",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
