--- a/cdk/package.json
+++ b/cdk/package.json
@@ -12,22 +12,22 @@
   },
   "author": "ra100",
   "license": "GNU LGPLv3",
-  "dependencies": {
+  "devDependencies": {
     "@aws-cdk/assert": "^1.95.1",
     "@aws-cdk/aws-apigateway": "^1.95.1",
+    "@aws-cdk/aws-ecr-assets": "^1.95.1",
     "@aws-cdk/aws-lambda": "^1.95.1",
     "@aws-cdk/aws-lambda-nodejs": "^1.95.1",
     "@aws-cdk/aws-logs": "^1.95.1",
     "@aws-cdk/aws-s3": "^1.95.1",
     "@aws-cdk/aws-sqs": "^1.95.1",
+    "@aws-cdk/aws-lambda-event-sources": "^1.95.1",
     "@aws-cdk/core": "^1.95.1",
+    "@types/jest": "^26.0.22",
     "aws-cdk": "^1.95.1",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0"
   }
 }
