--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "include": ["svg/**/*", "cdk/**/*", "cli/**/*", "png/**/*"],
-  "exclude": ["cdk.out", "dist"],
+  "exclude": ["**/cdk.out", "**/dist"],
   "compilerOptions": {
     "module": "commonjs",
     "lib": ["esnext"],
