--- a/result/package.json
+++ b/result/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-lambda": "^3.14.0",
     "@aws-sdk/client-s3": "^3.14.0",
     "@aws-sdk/lib-storage": "^3.14.0",
+    "@aws-sdk/s3-request-presigner": "^3.14.0",
     "@ra100-ecg/svg": "^1.0.0",
     "archiver": "^5.3.0",
     "aws-sdk": "^2.897.0"
