--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,21 +13,15 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "devDependencies": {
-    "@aws-cdk/assert": "^1.96.0",
-    "@aws-cdk/aws-apigateway": "^1.96.0",
-    "@aws-cdk/aws-ecr-assets": "^1.96.0",
-    "@aws-cdk/aws-lambda": "^1.96.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.96.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.96.0",
-    "@aws-cdk/aws-logs": "^1.96.0",
-    "@aws-cdk/aws-s3": "^1.96.0",
-    "@aws-cdk/aws-sqs": "^1.96.0",
-    "@aws-cdk/core": "^1.96.0",
-    "@types/jest": "^26.0.22",
-    "aws-cdk": "^1.96.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "@aws-cdk/assert": "^2.24.1",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.33",
+    "aws-cdk": "^2.24.1",
+    "aws-cdk-lib": "^2.24.1",
+    "constructs": "^10.1.7",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
