--- a/cli/package.json
+++ b/cli/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/cli.js",
+  "module": "dist/cli.js",
+  "typings": "dist/cli.d.ts",
   "files": [
     "dist",
     "src"
@@ -31,7 +31,7 @@
       ]
     },
     "start": {
-      "command": "node dist/index.js",
+      "command": "node dist/cli.js",
       "dependencies": [
         "build"
       ]
@@ -50,12 +50,12 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^28.1.6",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^17.0.33",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "@types/node": "^18.6.4",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
