--- a/svg/package.json
+++ b/svg/package.json
@@ -43,18 +43,18 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.194.0",
+    "@aws-sdk/client-lambda": "^3.238.0",
     "@aws-sdk/client-sqs": "^3.238.0",
-    "nanoid": "^4.0.0"
+    "nanoid": "~3.3.4"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.226.0",
     "@types/aws-lambda": "^8.10.109",
-    "@types/jest": "^29.2.0",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.18",
-    "jest": "^29.2.2",
+    "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
