--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "wireit",
+    "clean": "wireit",
     "lint": "wireit",
     "test": "wireit",
     "test:cdk": "wireit",
@@ -21,7 +22,15 @@
   },
   "wireit": {
     "build": {
-      "command": "tsc -b"
+      "command": "tsc -b",
+      "dependencies": [
+        "./svg:build",
+        "./cli:build",
+        "./png:build"
+      ]
+    },
+    "clean": {
+      "command": "rimraf */dist */tsconfig.tsbuildinfo"
     },
     "lint": {
       "command": "eslint --ext mjs --ext ts ."
@@ -48,6 +57,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unicorn": "^45.0.2",
     "prettier": "^2.8.3",
+    "rimraf": "^4.1.2",
     "typescript": "^4.9.5",
     "wireit": "^0.9.4"
   }
