--- a/svg/package.json
+++ b/svg/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.264.0",
     "@aws-sdk/client-sqs": "^3.264.0",
-    "nanoid": "~3.3.4"
+    "nanoid": "^4.0.0"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.257.0",
