--- a/cdk/package.json
+++ b/cdk/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@aws-cdk/assert": "^2.68.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
+    "@types/node": "22.7.5",
     "aws-cdk": "^2.131.0",
     "aws-cdk-lib": "^2.131.0",
     "constructs": "^10.3.0",
