--- a/cli/package.json
+++ b/cli/package.json
@@ -54,9 +54,9 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^20.11.24",
+    "@types/node": "22.7.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
