--- a/svg/package.json
+++ b/svg/package.json
@@ -43,18 +43,18 @@
   "author": "ra100",
   "license": "GNU LGPLv3",
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.525.0",
-    "@aws-sdk/client-sqs": "^3.525.0",
-    "nanoid": "^5.0.6"
+    "@aws-sdk/client-lambda": "^3.651.1",
+    "@aws-sdk/client-sqs": "^3.651.1",
+    "nanoid": "^5.0.7"
   },
   "devDependencies": {
-    "@aws-sdk/types": "^3.523.0",
-    "@types/aws-lambda": "^8.10.134",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
+    "@aws-sdk/types": "^3.649.0",
+    "@types/aws-lambda": "^8.10.145",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.7.5",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.2"
   }
 }
